# serializer version: 1
# name: test_snapshot_v1[registry]
  list([
    tuple(
      'binary_sensor.eveus_1_2_3_4_ground',
      'e_v1_ground',
      'None',
      'Ground',
      False,
    ),
    tuple(
      'binary_sensor.eveus_1_2_3_4_ground_control',
      'e_v1_groundctrl',
      'None',
      'Ground Control',
      False,
    ),
    tuple(
      'button.eveus_1_2_3_4_force_refresh',
      'e_v1_force_refresh',
      'None',
      'Force Refresh',
      False,
    ),
    tuple(
      'number.eveus_1_2_3_4_charging_current',
      'e_v1_current_set',
      'None',
      'Charging Current',
      False,
    ),
    tuple(
      'select.eveus_1_2_3_4_ai_mode',
      'e_v1_ai_mode',
      'None',
      'AI Mode',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_ai_status',
      'e_v1_aistatus',
      'None',
      'AI Status',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_ai_voltage',
      'e_v1_aivoltage',
      'None',
      'AI Voltage',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_current',
      'e_v1_curmeas1',
      'None',
      'Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_daily_energy',
      'e_v1_energy_daily',
      'None',
      'Daily Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_daily_session_time',
      'e_v1_session_time_daily',
      'None',
      'Daily Session Time',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_design_current',
      'e_v1_curdesign',
      'None',
      'Design Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_internal_temperature',
      'e_v1_temperature1',
      'None',
      'Internal Temperature',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_last_session_duration',
      'e_v1_last_session_duration',
      'None',
      'Last Session Duration',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_last_session_energy',
      'e_v1_last_session_energy',
      'None',
      'Last Session Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_leak_current',
      'e_v1_leakvalue',
      'diagnostic',
      'Leak Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_plug_temperature',
      'e_v1_temperature2',
      'None',
      'Plug Temperature',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_power',
      'e_v1_powermeas',
      'None',
      'Power',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_session_energy',
      'e_v1_sessionenergy',
      'None',
      'Session Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_session_time',
      'e_v1_sessiontime',
      'None',
      'Session Time',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_set_current',
      'e_v1_currentset',
      'None',
      'Set Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_state',
      'e_v1_state',
      'None',
      'State',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_system_time',
      'e_v1_systemtime',
      'diagnostic',
      'System Time',
      True,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_time_drift',
      'e_v1_time_drift',
      'diagnostic',
      'Time Drift',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_total_energy',
      'e_v1_totalenergy',
      'None',
      'Total Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_voltage',
      'e_v1_voltmeas1',
      'None',
      'Voltage',
      False,
    ),
    tuple(
      'switch.eveus_1_2_3_4_charging',
      'e_v1_charging',
      'None',
      'Charging',
      False,
    ),
  ])
# ---
# name: test_snapshot_v1[states]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'safety',
        'friendly_name': 'Eveus 1.2.3.4 Ground',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.eveus_1_2_3_4_ground',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'safety',
        'friendly_name': 'Eveus 1.2.3.4 Ground Control',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.eveus_1_2_3_4_ground_control',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Force Refresh',
        'icon': 'mdi:refresh',
      }),
      'context': <ANY>,
      'entity_id': 'button.eveus_1_2_3_4_force_refresh',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Charging Current',
        'icon': 'mdi:current-ac',
        'max': 32.0,
        'min': 7,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'number.eveus_1_2_3_4_charging_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '24',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 AI Mode',
        'icon': 'mdi:brain',
        'options': list([
          'off',
          'voltage',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'select.eveus_1_2_3_4_ai_mode',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'enum',
        'friendly_name': 'Eveus 1.2.3.4 AI Status',
        'icon': 'mdi:brain',
        'options': list([
          'off',
          'voltage',
          'tesla_auto',
          'power',
          'unknown',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_ai_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'voltage',
        'friendly_name': 'Eveus 1.2.3.4 AI Voltage',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'V',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_ai_voltage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '200',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Eveus 1.2.3.4 Current',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '23.8',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'baseline_kwh': None,
        'date': None,
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Daily Energy',
        'icon': 'mdi:counter',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_daily_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'accumulated_s': 0.0,
        'date': None,
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Daily Session Time',
        'icon': 'mdi:av-timer',
        'prev_s': None,
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'h',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_daily_session_time',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '0.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Eveus 1.2.3.4 Design Current',
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_design_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '32',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Eveus 1.2.3.4 Internal Temperature',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_internal_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '43',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Last Session Duration',
        'icon': 'mdi:history',
        'unit_of_measurement': 's',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_last_session_duration',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Last Session Energy',
        'icon': 'mdi:history',
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_last_session_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Leak Current',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'mA',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_leak_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Eveus 1.2.3.4 Plug Temperature',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_plug_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '-60',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Eveus 1.2.3.4 Power',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'W',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '5045.6',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Session Energy',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_session_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '6.3',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Session Time',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 's',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_session_time',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '4561',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Eveus 1.2.3.4 Set Current',
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_set_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '24',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'enum',
        'friendly_name': 'Eveus 1.2.3.4 State',
        'icon': 'mdi:power',
        'options': list([
          'no_data',
          'ready',
          'waiting',
          'charging',
          'current_leak',
          'cpu_error',
          'no_ground',
          'overheat_plug',
          'overheat_relay',
          'overcurrent',
          'overvoltage',
          'undervoltage',
          'limited_by_time',
          'limited_by_energy',
          'limited_by_money',
          'limited_by_schedule1',
          'limited_by_schedule2',
          'disabled_by_user',
          'relay_stuck',
          'limited_by_ai_mode',
          'startup',
          'system_test',
          'standby',
          'connected',
          'charge_complete',
          'paused',
          'error',
          'unknown',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_state',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'charging',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Time Drift',
        'icon': 'mdi:clock-alert-outline',
        'unit_of_measurement': 's',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_time_drift',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '37550',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Total Energy',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_total_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '1162.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'voltage',
        'friendly_name': 'Eveus 1.2.3.4 Voltage',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'V',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_voltage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '212',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Charging',
      }),
      'context': <ANY>,
      'entity_id': 'switch.eveus_1_2_3_4_charging',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'on',
    }),
  ])
# ---
# name: test_snapshot_v2[registry]
  list([
    tuple(
      'binary_sensor.eveus_1_2_3_4_ground',
      'e_v2_ground',
      'None',
      'Ground',
      False,
    ),
    tuple(
      'binary_sensor.eveus_1_2_3_4_ground_control',
      'e_v2_groundctrl',
      'None',
      'Ground Control',
      False,
    ),
    tuple(
      'button.eveus_1_2_3_4_force_refresh',
      'e_v2_force_refresh',
      'None',
      'Force Refresh',
      False,
    ),
    tuple(
      'button.eveus_1_2_3_4_sync_time',
      'e_v2_sync_time',
      'None',
      'Sync Time',
      False,
    ),
    tuple(
      'number.eveus_1_2_3_4_charging_current',
      'e_v2_current_set',
      'None',
      'Charging Current',
      False,
    ),
    tuple(
      'select.eveus_1_2_3_4_ai_mode',
      'e_v2_ai_mode',
      'None',
      'AI Mode',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_ai_status',
      'e_v2_aistatus',
      'None',
      'AI Status',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_ai_voltage',
      'e_v2_aivoltage',
      'None',
      'AI Voltage',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_battery_voltage',
      'e_v2_vbat',
      'diagnostic',
      'Battery Voltage',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_current',
      'e_v2_curmeas1',
      'None',
      'Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_daily_energy',
      'e_v2_energy_daily',
      'None',
      'Daily Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_daily_session_time',
      'e_v2_session_time_daily',
      'None',
      'Daily Session Time',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_design_current',
      'e_v2_curdesign',
      'None',
      'Design Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_energy_meter_1',
      'e_v2_iem1',
      'None',
      'Energy Meter 1',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_energy_meter_2',
      'e_v2_iem2',
      'None',
      'Energy Meter 2',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_internal_temperature',
      'e_v2_temperature1',
      'None',
      'Internal Temperature',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_last_session_duration',
      'e_v2_last_session_duration',
      'None',
      'Last Session Duration',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_last_session_energy',
      'e_v2_last_session_energy',
      'None',
      'Last Session Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_leak_current',
      'e_v2_leakvalue',
      'diagnostic',
      'Leak Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_plug_temperature',
      'e_v2_temperature2',
      'None',
      'Plug Temperature',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_power',
      'e_v2_powermeas',
      'None',
      'Power',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_session_energy',
      'e_v2_sessionenergy',
      'None',
      'Session Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_session_time',
      'e_v2_sessiontime',
      'None',
      'Session Time',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_set_current',
      'e_v2_currentset',
      'None',
      'Set Current',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_state',
      'e_v2_state',
      'None',
      'State',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_sub_state',
      'e_v2_substate',
      'None',
      'Sub-state',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_system_time',
      'e_v2_systemtime',
      'diagnostic',
      'System Time',
      True,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_time_drift',
      'e_v2_time_drift',
      'diagnostic',
      'Time Drift',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_total_energy',
      'e_v2_totalenergy',
      'None',
      'Total Energy',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_voltage',
      'e_v2_voltmeas1',
      'None',
      'Voltage',
      False,
    ),
    tuple(
      'sensor.eveus_1_2_3_4_wi_fi_signal',
      'e_v2_rssi',
      'diagnostic',
      'Wi-Fi Signal',
      False,
    ),
    tuple(
      'switch.eveus_1_2_3_4_charging',
      'e_v2_charging',
      'None',
      'Charging',
      False,
    ),
  ])
# ---
# name: test_snapshot_v2[states]
  list([
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'safety',
        'friendly_name': 'Eveus 1.2.3.4 Ground',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.eveus_1_2_3_4_ground',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'safety',
        'friendly_name': 'Eveus 1.2.3.4 Ground Control',
      }),
      'context': <ANY>,
      'entity_id': 'binary_sensor.eveus_1_2_3_4_ground_control',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'off',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Force Refresh',
        'icon': 'mdi:refresh',
      }),
      'context': <ANY>,
      'entity_id': 'button.eveus_1_2_3_4_force_refresh',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Sync Time',
        'icon': 'mdi:clock-check',
      }),
      'context': <ANY>,
      'entity_id': 'button.eveus_1_2_3_4_sync_time',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Charging Current',
        'icon': 'mdi:current-ac',
        'max': 32.0,
        'min': 6,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'number.eveus_1_2_3_4_charging_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '30',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 AI Mode',
        'icon': 'mdi:brain',
        'options': list([
          'off',
          'voltage',
          'tesla_auto',
          'power',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'select.eveus_1_2_3_4_ai_mode',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'power',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'enum',
        'friendly_name': 'Eveus 1.2.3.4 AI Status',
        'icon': 'mdi:brain',
        'options': list([
          'off',
          'voltage',
          'tesla_auto',
          'power',
          'unknown',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_ai_status',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'power',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'voltage',
        'friendly_name': 'Eveus 1.2.3.4 AI Voltage',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'V',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_ai_voltage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '195',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'voltage',
        'friendly_name': 'Eveus 1.2.3.4 Battery Voltage',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'V',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_battery_voltage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '2.8199999332428',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Eveus 1.2.3.4 Current',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '28.5200004577637',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'baseline_kwh': None,
        'date': None,
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Daily Energy',
        'icon': 'mdi:counter',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_daily_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'accumulated_s': 0.0,
        'date': None,
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Daily Session Time',
        'icon': 'mdi:av-timer',
        'prev_s': None,
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'h',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_daily_session_time',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '0.0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Eveus 1.2.3.4 Design Current',
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_design_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '32',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Energy Meter 1',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_energy_meter_1',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '103.96900177002',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Energy Meter 2',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_energy_meter_2',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '2123.99194335938',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Eveus 1.2.3.4 Internal Temperature',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_internal_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '18',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Last Session Duration',
        'icon': 'mdi:history',
        'unit_of_measurement': 's',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_last_session_duration',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Last Session Energy',
        'icon': 'mdi:history',
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_last_session_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'unknown',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Leak Current',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'mA',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_leak_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '0',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'temperature',
        'friendly_name': 'Eveus 1.2.3.4 Plug Temperature',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_plug_temperature',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '6',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Eveus 1.2.3.4 Power',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'W',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_power',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '6048',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Session Energy',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_session_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '16.0100002288818',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Session Time',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 's',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_session_time',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '11183',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Eveus 1.2.3.4 Set Current',
        'unit_of_measurement': 'A',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_set_current',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '30',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'enum',
        'friendly_name': 'Eveus 1.2.3.4 State',
        'icon': 'mdi:power',
        'options': list([
          'no_data',
          'ready',
          'waiting',
          'charging',
          'current_leak',
          'cpu_error',
          'no_ground',
          'overheat_plug',
          'overheat_relay',
          'overcurrent',
          'overvoltage',
          'undervoltage',
          'limited_by_time',
          'limited_by_energy',
          'limited_by_money',
          'limited_by_schedule1',
          'limited_by_schedule2',
          'disabled_by_user',
          'relay_stuck',
          'limited_by_ai_mode',
          'startup',
          'system_test',
          'standby',
          'connected',
          'charge_complete',
          'paused',
          'error',
          'unknown',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_state',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'charging',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'enum',
        'friendly_name': 'Eveus 1.2.3.4 Sub-state',
        'icon': 'mdi:information',
        'options': list([
          'no_error',
          'grounding_error',
          'current_leak_high',
          'relay_error',
          'current_leak_low',
          'box_overheat',
          'plug_overheat',
          'pilot_error',
          'low_voltage',
          'diode_error',
          'overcurrent',
          'interface_timeout',
          'software_failure',
          'gfci_test_failure',
          'high_voltage',
          'no_limits',
          'limited_by_user',
          'energy_limit',
          'time_limit',
          'cost_limit',
          'schedule1_limit',
          'schedule1_energy_limit',
          'schedule2_limit',
          'schedule2_energy_limit',
          'waiting_for_activation',
          'paused_by_adaptive_mode',
          'unknown',
        ]),
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_sub_state',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'no_limits',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'duration',
        'friendly_name': 'Eveus 1.2.3.4 Time Drift',
        'icon': 'mdi:clock-alert-outline',
        'unit_of_measurement': 's',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_time_drift',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '-48798040',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Eveus 1.2.3.4 Total Energy',
        'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
        'unit_of_measurement': 'kWh',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_total_energy',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '2123.99194335938',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'voltage',
        'friendly_name': 'Eveus 1.2.3.4 Voltage',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'V',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_voltage',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '212',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'device_class': 'signal_strength',
        'friendly_name': 'Eveus 1.2.3.4 Wi-Fi Signal',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'dBm',
      }),
      'context': <ANY>,
      'entity_id': 'sensor.eveus_1_2_3_4_wi_fi_signal',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': '-63',
    }),
    StateSnapshot({
      'attributes': ReadOnlyDict({
        'friendly_name': 'Eveus 1.2.3.4 Charging',
      }),
      'context': <ANY>,
      'entity_id': 'switch.eveus_1_2_3_4_charging',
      'last_changed': <ANY>,
      'last_reported': <ANY>,
      'last_updated': <ANY>,
      'state': 'on',
    }),
  ])
# ---
